--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-TaiPlugin - сборник плагинов для Bukkit Minecraft Server
-Распространяется по лицензии GNU 3
-Вопросы, предложения и найденные баги просьба направлять на tairesh.rus@gmail.com
+noTNT - РїСЂРµРІСЂР°С‚РёС‚Рµ РІРµСЃСЊ РґРёРЅР°РјРёС‚ РІ С‚РѕСЂС‚С‹!
+
+Email РґР»СЏ СЃРІСЏР·Рё - tairesh.rus@gmail.com
